# test-cmake-project

./: LICENSE  README.md  pom.xml
.github/workflows/: maven.yaml
jvm/: pom.xml
native/: CMakeLists.txt  pom.xml
native/generic-core/: CMakeLists.txt  pom.xml  zscript-generic-coreConfig.cmake.in
native/generic-core/src/main/c/: CMakeLists.txt  zscript.h
native/generic-core/src/main/c/t_zscript/: all.h  all_defs.h
native/generic-core/src/main/c/t_zscript/sys/: zscriptsys.h  zscriptsys_defs.h
native/generic-core/src/main/c/zscript/: all.h  all_defs.h
native/generic-core/src/main/c/zscript/sys/: zscriptsys.h
native/generic-core/src/main/c/zscript/tokenbuffer/: tokenbuffer.h  tokenbuffer_defs.h
native/generic-core/src/main/cmake/: core-version.h.in  t_zscript-generic-core-config.cmake.in  zscript-generic-core-config.cmake.in
native/generic-core/src/test/c/: CMakeLists.txt
native/generic-core/src/test/c/zscript/sys/: CMakeLists.txt  zscriptsys1_tests.c  zscriptsys2_tests.c  zscriptsys_tests.c
native/generic-core/src/test/c/zscript/tokenbuffer/: CMakeLists.txt  tokenbuffer_tests.c
native/platform-runtime/: CMakeLists.txt  pom.xml
native/platform-runtime/src/main/c/: CMakeLists.txt
native/platform-runtime/src/main/c/t_zscript-modules/: all-modules.h  all-modules_defs.h
native/platform-runtime/src/main/c/t_zscript-modules/mod-000x-core/: mod-000x-core.h  mod-000x-core_defs.h
native/platform-runtime/src/main/c/zscript-modules/: all-modules.h  all-modules_defs.h  all_modules_defs.h
native/platform-runtime/src/main/c/zscript-modules/mod-000x-core/: mod-000x-core.h  mod-000x-core_defs.h
native/platform-runtime/src/main/cmake/: ---core-version.h.in  t_zscript-platform-runtime-config.cmake.in  zscript-platform-runtime-config.cmake.in  zscript-platform-runtimeConfig.cmake.in
native/platform-runtime/src/test/c/: CMakeLists.txt
native/platform-runtime/src/test/c/t_zscript-modules/mod-000x-core/: CMakeLists.txt  module-000x_tests.c
native/platform-runtime/src/test/c/zscript-modules/mod-000x-core/: CMakeLists.txt  module-000x_tests.c
